src/test/ui/macros/macro-match-nonterminal.stderr
error: missing fragment specifier
  --> $DIR/macro-match-nonterminal.rs:1:24
   |
LL | macro_rules! test { ($a, $b) => (()); }
   |                        ^

error: missing fragment specifier
  --> $DIR/macro-match-nonterminal.rs:1:26
   |
LL | macro_rules! test { ($a, $b) => (()); }
   |                          ^^

error: missing fragment specifier
  --> $DIR/macro-match-nonterminal.rs:1:24
   |
LL | macro_rules! test { ($a, $b) => (()); }
   |                        ^

error: aborting due to 3 previous errors

